--- a/tutorials/ComplexArithmetic/ComplexArithmetic.ipynb
+++ b/tutorials/ComplexArithmetic/ComplexArithmetic.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,17 +93,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def imaginary_power(n : int) -> int:\n",
     "    # If n is divisible by 4\n",
     "    if n % 4 == 0:\n",
-    "        return ...\n",
+    "        return 1\n",
     "    else:\n",
-    "        return ..."
+    "        return -1"
    ]
   },
   {
@@ -155,9 +163,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def complex_add(x : Complex, y : Complex) -> Complex:\n",
@@ -171,7 +187,7 @@
     "    # This creates a new variable and stores the real component into it\n",
     "    real = a + c\n",
     "    # Replace the ... with code to calculate the imaginary component\n",
-    "    imaginary = ...\n",
+    "    imaginary = b + d\n",
     "    \n",
     "    # You can create a tuple like this\n",
     "    ans = (real, imaginary)\n",
@@ -214,14 +230,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def complex_mult(x : Complex, y : Complex) -> Complex:\n",
     "    # Fill in your own code\n",
-    "    return ..."
+    "    a = x[0]\n",
+    "    b = x[1]\n",
+    "    \n",
+    "    c = y[0]\n",
+    "    d = y[1]\n",
+    "    \n",
+    "    real = (a*c) - (b*d)\n",
+    "    imaginary = (a*d) + (b*c)\n",
+    "    \n",
+    "    return (real,imaginary)"
    ]
   },
   {
@@ -274,13 +307,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def conjugate(x : Complex) -> Complex:\n",
-    "    return ..."
+    "    real = x[0]\n",
+    "    imaginary = x[1]\n",
+    "    return (real,-imaginary)"
    ]
   },
   {
@@ -333,13 +376,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def complex_div(x : Complex, y : Complex) -> Complex:\n",
-    "    return ..."
+    "    a = x[0]\n",
+    "    b = x[1]\n",
+    "    c = y[0]\n",
+    "    d = y[1]\n",
+    "    \n",
+    "    numeratorReal = (a*c) + (b*d)\n",
+    "    numeratorImaginary = -(a*d) + (b*c)\n",
+    "    \n",
+    "    denominator = (c*c) + (d*d)\n",
+    "    \n",
+    "    real = numeratorReal/denominator\n",
+    "    imaginary = numeratorImaginary/denominator\n",
+    "    \n",
+    "    return (real,imaginary)"
    ]
   },
   {
@@ -412,13 +476,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def modulus(x : Complex) -> float:\n",
-    "    return ..."
+    "    a = x[0]\n",
+    "    b = x[1]\n",
+    "    ans = (a*a) + (b*b)\n",
+    "    return math.sqrt(ans)"
    ]
   },
   {
@@ -480,13 +555,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def complex_exp(x : Complex) -> Complex:\n",
-    "    return ..."
+    "    real = x[0]\n",
+    "    imaginary = x[1]\n",
+    "    ansReal = (math.e ** real) * math.cos(imaginary)\n",
+    "    ansImaginary = (math.e ** real) * math.sin(imaginary)\n",
+    "    return (ansReal,ansImaginary)"
    ]
   },
   {
@@ -578,14 +665,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def polar_convert(x : Complex) -> Polar:\n",
-    "    r = ...\n",
-    "    theta = ...\n",
+    "    (a,b) = x\n",
+    "    r = math.sqrt(a**2 + b**2)\n",
+    "    theta = math.atan2(b,a)\n",
     "    \n",
     "    return (r, theta)"
    ]
@@ -610,13 +706,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def cartesian_convert(x : Polar) -> Complex:\n",
-    "    return ..."
+    "    r = x[0]\n",
+    "    theta = x[1]\n",
+    "    real = r * math.cos(theta)\n",
+    "    imaginary = r * math.sin(theta)\n",
+    "    \n",
+    "    return (real, imaginary)"
    ]
   },
   {
@@ -655,13 +764,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Success!\n"
+     ]
+    }
+   ],
    "source": [
     "@exercise\n",
     "def polar_mult(x : Polar, y : Polar) -> Polar:\n",
-    "    return ..."
+    "    (r1,theta1) = x\n",
+    "    (r2,theta2) = y\n",
+    "    r = r1*r2\n",
+    "    angle = theta1+theta2\n",
+    "    \n",
+    "        # If the calculated angle is larger then pi, we will subtract 2pi\n",
+    "    if (angle > math.pi):\n",
+    "        # Reassign the value for angle\n",
+    "        angle = angle - 2.0 * math.pi\n",
+    "        \n",
+    "    # If the calculated angle is smaller then -pi, we will add 2 pi\n",
+    "    elif (angle <= -math.pi):\n",
+    "        angle = angle + 2.0 * math.pi\n",
+    "    return (r,angle)"
    ]
   },
   {
@@ -723,7 +853,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -737,7 +867,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
